@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Fix build on big-endian architectures
+
 
 Version 1.9.0 (2021-01-29)
 ==========================
